[project]
authors = [{name = "Matthew Wright", email = "matt.jeremy.wright@gmail.com"}]
dependencies = ["build>=1.2.2.post1,<2"]
description = "A wrapper for handling HCP Vault Secrets on an app-by-app basis"
name = "hcp-vault-secrets-wrapper"
requires-python = ">= 3.6"
version = "0.5.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
hcp_vault_secrets_wrapper = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.6,<3.13"

